@@ -19,7 +19,8 @@ typedef enum urltype_e {
     URL_IS_FTP		= 3,	/*!< ftp://... */
     URL_IS_HTTP		= 4,	/*!< http://... */
     URL_IS_HTTPS	= 5,	/*!< https://... */
-    URL_IS_HKP		= 6	/*!< hkp://... */
+    URL_IS_HKP		= 6,	/*!< hkp://... */
+    URL_IS_MONGO	= 7,	/*!< mongo://... and mongodb://... */
 } urltype;
 
 #define	URLMAGIC	0xd00b1ed0U
